[build-system]
requires = [
    "setuptools>=62.1",
    "setuptools_scm[toml]>=8.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nuclockutils"
description = "Utilities for a precise timing calibration of NuSTAR data"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
    { name = "Matteo Bachetti", email = "matteo.bachetti@inaf.it" },
]
dependencies = [
    "numpy<2.0",
    "scipy",
    "astropy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "pint-pulsar",
    "tqdm",
    "jplephem",
    "datashader",
    "bokeh",
    "holoviews>=1.18",
    "statsmodels",
    "h5py",
    "astroquery",
    "plotly",
    "dash",
    "stingray>=0.3",
    "pyyaml",
    "hendrics",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/matteobachetti/nustar-clock-utils"

[project.scripts]
nustar_tempcorr = "nuclockutils.nustarclock:main_tempcorr"
nustar_barycorr = "nuclockutils.barycorr:main_barycorr"
nustar_clockfile = "nuclockutils.nustarclock:main_create_clockfile"
nustar_update_temperature = "nuclockutils.nustarclock:main_update_temptable"
nustar_clean_clock = "nuclockutils.clean_clock.app:main"
nustar_plot_diagnostics = "nuclockutils.nustarclock:main_plot_diagnostics"
nustar_test_new_clockfile = "nuclockutils.diagnostics.bary_and_fold_all:main"
nustar_compare_pulses = "nuclockutils.diagnostics.compare_pulses:main"
nustar_compare_clock_files = "nuclockutils.diagnostics.compare_clock_files:main"
nustar_get_crab_ephemeris = "nuclockutils.diagnostics.get_crab_ephemeris:main"
nustar_fold_to_ephemeris = "nuclockutils.diagnostics.fold_to_ephemeris:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-astropy",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["nuclockutils*"]

[tool.setuptools_scm]
version_file = "nuclockutils/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "nuclockutils",
    "docs",
]
minversion = "3.0"
norecursedirs = ["build", "docs/_build"]
doctest_plus = "enabled"
addopts = "-p no:warnings"

[tool.coverage.run]
omit = [
    "nuclockutils/conftest.py",
    "nuclockutils/*setup_package*",
    "nuclockutils/tests/*",
    "nuclockutils/*/tests/*",
    "nuclockutils/extern/*",
    "nuclockutils/version*",
    "nuclockutils/_version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "if TYPE_CHECKING:",
    "@overload",
]
