[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = nuclockutils
description = Utilities for a precise timing calibration of NuSTAR data
long_description =  Utilities for a precise timing calibration of NuSTAR data
author = Matteo Bachetti
author_email = matteo.bachetti@inaf.it
license = BSD 3-Clause
url = http://github.com/matteobachetti/nustar-clock-utils
edit_on_github = False
github_project = matteobachetti/nustar-clock-utils
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy

# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

nustar_tempcorr = nuclockutils.nustarclock:main_tempcorr
nustar_barycorr = nuclockutils.barycorr:main_barycorr

[config.logging_helper]
# Threshold for the logging messages. Logging messages that are less severe
# than this level will be ignored. The levels are 'DEBUG', 'INFO', 'WARNING',
# 'ERROR'
log_level = 'INFO'
# Whether to use color for the level names
use_color = True
# Whether to log warnings.warn calls
log_warnings = False
# Whether to log exceptions before raising them
log_exceptions = False
# Whether to always log messages to a log file
log_to_file = True
# The file to log messages to
log_file_path = '~/.astropy/astropy.log'
# Threshold for logging messages to log_file_path
log_file_level = 'INFO'
;# Format for log file entries
;log_file_format = '%(asctime)s, %(origin)s, %(levelname)s, %(message)s'
